# underwriter-cursorhack

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  init_db.py  session.py
app/models/: __init__.py  applicant.py  application.py  decision.py  document.py  user.py
app/schemas/: applicant.py  application.py  auth.py  common.py  decision.py  document.py
app/services/: applicant_service.py  application_service.py  decision_service.py  document_service.py  user_service.py
backend/: .env.example  .gitignore  AGENT_BRIEF.md  MANDATE.md  README.md  next.config.ts  package-lock.json  package.json
backend/agents/: amend.ts  memo.ts  orchestrator.ts  parse-prompt.ts  synthesise.ts
backend/app/: layout.tsx  main.py  page.tsx
backend/docs/: ARCHITECTURE.md  Backend.md  DATA_SOURCES.md  DEMO.md  FRONTEND_INTEGRATION.md  SPECTER_FLOW.md
backend/fixtures/: fund-state.json
backend/lib/: cache.ts  contract.ts  ledger.ts  mandate-evaluator.ts  mandate-loader.ts  types.ts  util.ts
backend/scripts/: sdk-probe.ts  smoke.ts
front-end/: INGESTION.md  package-lock.json  package.json
front-end/app/: globals.css  layout.tsx  page.tsx
frontend/: README.md  index.html  package.json
frontend/src/: App.tsx  index.css
tests/: conftest.py  test_underwriting_engine.py
tests/api/: test_health_and_auth.py  test_underwriting_flow.py
(+65 files in other folders)
